Update the design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Exile&family=Henny+Penny&family=
 Kaushan+Script&family=Poetsen+One&family=Road+Rage&family=Yesteryear&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-gray-900">
+  <body style="background-color: #303030;">
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
